<?xml version="1.0"?>
<package format="3">
  <name>tsl_ros2_utils_cpp</name>
  <version>1.0.0</version>
  <description>A package containing utilites for working with tsl in ros2</description>
  <maintainer email="simon.sagmeister@tum.de">Simon Sagmeister</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>tsl_msgs</depend>
  <depend>tsl_logger_cpp</depend>
  <depend>tsl_ros2_publisher_cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>